2013-02-09  Robby Stephenson  <robby@periapsis.org>

	* Fixed character encoding in IMDB results list (Bug 314113).

2013-02-02  Robby Stephenson  <robby@periapsis.org>

	* Added fetcher for VNDB.org.

2013-01-27  Robby Stephenson  <robby@periapsis.org>

	* Added Dewey Decimal and LCC to ISBNdb.org results.

2013-01-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug with OpenLibrary fetcher.

2013-01-23  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.7.

2013-01-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with the number field not catching a modified value (Bug 313304).

2013-01-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with editing the toolbar config in KDE 4.9.2+.

2012-12-07  Robby Stephenson  <robby@periapsis.org>

	* Added a config setting for using a Google API key for book searches.
	* Updated fetcher for IMDb.

2012-11-21  Robby Stephenson  <robby@periapsis.org>

	* Added VinoXML importer.

2012-11-03  Robby Stephenson  <robby@periapsis.org>

	* Added fetcher for DBLP.org.

2012-10-14  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug that caused loans to fail to get checked-in (Bug 307958).

2012-09-18  Robby Stephenson  <robby@periapsis.org>

	* Added fetcher for thegamesdb.net.

2012-09-03  Robby Stephenson  <robby@periapsis.org>

	* Updated Delicious Library importer.

2012-08-26  Robby Stephenson  <robby@periapsis.org>

	* Removed API key configuration for Discogs since it's no longer needed.

2012-08-22  Robby Stephenson  <robby@periapsis.org>

	* Corrected character encoding for DVDfr search.
	* Corrected title vs. original title in DVDfr results.
	* Corrected actor and role order in Allocine fetcher.

2012-08-07  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with adding new fields when importing bibtex (Bug 304767).

2012-07-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.6.

2012-06-10  Robby Stephenson  <robby@periapsis.org>
